--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,11 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.11"
-flask = "^3.0.0"
-functions = "^0.7.0"
 openai = "^1.2.3"
 packaging = "^23.2"
-flask-compress = "^1.14"
-gevent = "^23.9.1"
+fastapi = "^0.109.0"
+pydantic = "^2.5.3"
+uvicorn = "^0.27.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
