--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
-name = "python-template"
+name = "now-is-the-time"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["Leopoldo Garcia Vargas <lk13.dev@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<3.11"
@@ -11,6 +11,10 @@ packaging = "^23.2"
 fastapi = "^0.109.0"
 pydantic = "^2.5.3"
 uvicorn = "^0.27.0"
+
+[tool.poetry.dev-dependencies]
+ruff = "^0.1.14"
+
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
