--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,20 @@ exclude = [".cache"]
 
 [tool.ruff]
 # https://beta.ruff.rs/docs/configuration/
+exclude= ['nowisthetime/prompts.py']
+target-version = "py310"
+
+[tool.ruff.lint]
 select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
 ignore = ['W291', 'W292', 'W293']
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+docstring-code-format = false
+docstring-code-line-length = "dynamic"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
