--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ uvicorn = "^0.27.0"
 
 [tool.poetry.dev-dependencies]
 ruff = "^0.1.14"
-
+#pyright = "^1.1.348"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
@@ -23,7 +23,7 @@ exclude = [".cache"]
 
 [tool.ruff]
 # https://beta.ruff.rs/docs/configuration/
-exclude= ['nowisthetime/prompts.py']
+exclude = ['nowisthetime/prompts.py']
 target-version = "py310"
 
 [tool.ruff.lint]
