Clean-up .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=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
-ASSISTANT_ID=asst_Vu5GoPzaJpQFNcJkycx3CMks
+OPENAI_API_KEY=
+ASSISTANT_ID=
