--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ exclude = [".cache"]
 # https://beta.ruff.rs/docs/configuration/
 exclude = ['nowisthetime/prompts.py']
 target-version = "py310"
+line-length = 100
 
 [tool.ruff.lint]
 select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
