--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ chainlit = "^1.0.200"
 
 [tool.poetry.dev-dependencies]
 ruff = "^0.1.14"
+pytest = "^7.4.4"
+pytest-asyncio = "^0.23.4"
+pytest-mock = "3.12.0"
 #pyright = "^1.1.348"
 
 [tool.pyright]
