Created shell script that contains commands to  manually deploy the assistant service. Some project improvements

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
     image: assistant-service:latest
     build:
       context: .
+    environment:
+      - OPENAI_API_KEY=
+      - ASSISTANT_ID=
     ports:
       - "8000:8000"
     working_dir: /home/appuser/app/
