--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ exclude = [".cache"]
 
 [tool.ruff]
 # https://beta.ruff.rs/docs/configuration/
-exclude = ['nowisthetime/prompts.py']
+exclude = ['nowisthetime_legacy/prompts.py']
 target-version = "py310"
 line-length = 100
 
