--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ uvicorn = "^0.25.0"
 #Chainlit
 chainlit = "^1.0.200"
 
+#GCP
+google-cloud-secret-manager = "^2.18.0"
+google_cloud_storage = "^2.14.0"
+
 [tool.poetry.dev-dependencies]
 ruff = "^0.1.14"
 pytest = "^7.4.4"
