--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ line-length = 120
 
 [tool.ruff.lint]
 select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
-ignore = ['W291', 'W292', 'W293']
+ignore = ['W291', 'W292', 'W293', 'SIM115']
 
 [tool.ruff.format]
 quote-style = "double"
