--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,10 +26,11 @@ pytest-mock = "3.12.0"
 minversion = "6.0"
 addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
 xfail_strict = true
-filterwarnings = ["error"]
 log_cli_level = "info"
 testpaths = [
   "tests",
+  "assistant_factory/tests",
+  "assistant_engine/tests"
 ]
 
 [tool.ruff]
