--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - PROJECT_ID=botbrewers
       - BUCKET_ID=botbrewers
-      - CLIENT_ID=nowisthetime
+      - CLIENT_ID=leogv
       - GOOGLE_APPLICATION_CREDENTIALS=/home/appuser/app/application_default_credentials.json
     ports:
       - "8000:8000"
