--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on:
     branches: ["main"]
     types: [opened, synchronize, reopened, closed]
 
+permissions:
+  pull-requests: read
+
 jobs:
   semantic-pr:
     if: github.event.action != 'closed'
