--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain>=0.3.25",
     "google-cloud-storage>=3.1.0",
     "google-cloud-secret-manager>=2.24.0",
+    "httpx>=0.27",
 ]
 
 [project.optional-dependencies]
