--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,10 +11,10 @@ dependencies = [
     "pydantic>=2.11.5",
     "pydantic-settings>=2.9.1",
     "uvicorn>=0.34.3",
-    "chainlit>=2.5.5",
     "langchain>=0.3.25",
     "google-cloud-storage>=3.1.0",
     "google-cloud-secret-manager>=2.24.0",
+    "httpx>=0.27",
 ]
 
 [project.optional-dependencies]
