--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ log_cli_level = "info"
 testpaths = [
     "assistant_factory/tests",
     "assistant_engine/tests",
+    "nowisthetime_legacy/tests",
 ]
 
 [tool.ruff]
