refactor: Remove botbrew_commons and reorganize shared code
- Eliminate premature shared library abstraction
- Move repository implementations to assistant_engine/repositories
- Move EngineAssistantConfig model to assistant_engine/models
- Create minimal duplicates in assistant_factory for true decoupling
- Update all imports and remove cross-application dependencies
- Remove botbrew_commons directory and references

This refactor improves code organization by keeping components close to
their primary consumers. The small amount of duplication (50 lines) is
a worthwhile tradeoff for clearer architecture and proper boundaries.

All Tests Pass: 69 tests passing with 87% coverage maintained

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,15 +36,13 @@ dev = [
     "python-semantic-release>=9.15.0",
 ]
 
-[tool.uv.sources]
-botbrew_commons = { path = "./botbrew_commons" }
+# [tool.uv.sources] - No local sources needed anymore
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = [
     "assistant_engine*",
     "assistant_factory*",
-    "botbrew_commons*",
 ]
 
 [tool.ruff]
