--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,7 +91,7 @@ log_cli_level = "INFO"
 log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 norecursedirs = ["examples", "lib", "local", "src", "research", "scripts"]
-testpaths = ["assistant_factory/tests", "assistant_engine/tests"]
+testpaths = ["assistant_factory/tests", "tests/assistant_engine"]
 asyncio_default_fixture_loop_scope = "function"
 markers = [
     "unit: marks tests as unit tests (deselect with '-m \"not unit\"')",
