--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,8 @@ description = "Multi-tenant Python assistant service with OpenAI integration"
 authors = [{name="Leopoldo Garcia Vargas", email="lk13.dev@gmail.com"}]
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "openai>=1.84.0",
+    "openai>=1.93.2",
+    "httpx>=0.27.0",
     "packaging>=24.2",
     "fastapi>=0.115.12",
     "pydantic>=2.11.5",
