refactor: Remove client_id for open source release
- Remove client_id field from ServiceConfig
- Update GCP repositories to use simplified naming (assistant-*)
- Remove client_id from all test files and fixtures
- Remove CLIENT_ID from Makefile and build targets
- Update docker-compose.yml and .env.example
- Update CLAUDE.md to remove multi-tenant references
- Simplify service for single-assistant deployments

This change transforms the service from multi-tenant to single-instance,
making it more suitable for open source users who deploy their own
assistant instances.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     build:
       context: .
     environment:
-      - PROJECT_ID=botbrewers
-      - BUCKET_ID=botbrewers
-      - CLIENT_ID=leogv
+      - PROJECT_ID=your-project-id
+      - BUCKET_ID=your-bucket-id
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
       - GOOGLE_APPLICATION_CREDENTIALS=/home/appuser/app/application_default_credentials.json
     ports:
       - "8000:8000"
