--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "structlog>=25.4.0",
     "websockets>=12.0",
     "python-dotenv>=1.0.0",
+    "sse-starlette>=2.0.0",
+    "httpx-sse>=0.4.0",
 ]
 
 [project.optional-dependencies]
